--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
 	"author": "Ivan Ivanov",
 	"license": "MIT",
 	"dependencies": {
-		"imagemin-jpeg-recompress": "^5.1.0"
+		"imagemin-jpeg-recompress": "^5.1.0",
+		"npm": "^6.7.0"
 	},
 	"scripts": {
 		"gulp": "gulp"
 	},
 	"devDependencies": {
-		"gulp": "latest",
+		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "latest",
 		"gulp-connect": "^5.2.0",
 		"gulp-imagemin": "latest",
