--- a/package.json
+++ b/package.json
@@ -5,27 +5,45 @@
 	"author": "Ivan Ivanov",
 	"license": "MIT",
 	"dependencies": {
-		"imagemin-jpeg-recompress": "^5.1.0",
-		"npm": "^6.7.0"
+		"npm": "^6.11.3",
+		"slick-carousel": "^1.8.1"
 	},
 	"scripts": {
-		"gulp": "gulp"
+		"dev": "gulp  --mode development --open",
+		"build": "gulp  --mode production"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.6.0",
+		"@babel/preset-env": "^7.6.0",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.0.6",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-es2015": "^6.24.1",
+		"css-loader": "^3.2.0",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "latest",
 		"gulp-connect": "^5.2.0",
-		"gulp-imagemin": "latest",
+		"gulp-imagemin": "^6.1.0",
 		"gulp-minify-css": "latest",
 		"gulp-notify": "^3.2.0",
 		"gulp-plumber": "^1.2.0",
-		"gulp-rename": "^1.2.2",
+		"gulp-rename": "^1.4.0",
 		"gulp-rigger": "^0.5.8",
 		"gulp-sass": "^3.1.0",
 		"gulp-sourcemaps": "^2.6.3",
-		"gulp-uglify": "latest",
+		"gulp-uglify": "^3.0.2",
 		"gulp-watch": "^5.0.0",
 		"gulp.spritesmith": "latest",
-		"rimraf": "^2.6.2"
+		"imagemin-jpeg-recompress": "^5.1.0",
+		"imagemin-mozjpeg": "^8.0.0",
+		"jquery": "^3.4.1",
+		"mini-css-extract-plugin": "^0.8.0",
+		"node-sass": "^4.12.0",
+		"rimraf": "^2.6.2",
+		"sass-loader": "^8.0.0",
+		"style-loader": "^1.0.0",
+		"webpack": "^4.40.2",
+		"webpack-stream": "^5.2.1"
 	}
 }
