--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"slick-carousel": "^1.8.1"
 	},
 	"scripts": {
-		"dev": "gulp  --mode development --open",
+		"dev": "gulp --mode development --open",
 		"build": "gulp  --mode production"
 	},
 	"devDependencies": {
@@ -33,16 +33,17 @@
 		"gulp-sass": "^3.1.0",
 		"gulp-sourcemaps": "^2.6.3",
 		"gulp-uglify": "^3.0.2",
+		"gulp-util": "^3.0.8",
 		"gulp-watch": "^5.0.0",
 		"gulp.spritesmith": "latest",
 		"imagemin-jpeg-recompress": "^5.1.0",
-		"imagemin-mozjpeg": "^8.0.0",
 		"jquery": "^3.4.1",
-		"mini-css-extract-plugin": "^0.8.0",
+		"node-notifier": "^6.0.0",
 		"node-sass": "^4.12.0",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^8.0.0",
 		"style-loader": "^1.0.0",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"webpack": "^4.40.2",
 		"webpack-stream": "^5.2.1"
 	}
