--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
 	"author": "Ivan Ivanov",
 	"license": "MIT",
 	"dependencies": {
+		"imagemin-giflossy": "^5.1.10",
+		"imagemin-mozjpeg": "^8.0.0",
+		"imagemin-pngquant": "^8.0.0",
+		"imagemin-zopfli": "^6.0.0",
 		"npm": "^6.11.3",
 		"slick-carousel": "^1.8.1"
 	},
